// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compatibility route /publications should return only public sources 1`] = `
Array [
  Object {
    "enabled": true,
    "id": "a",
    "image": "http://a.com",
    "name": "A",
  },
  Object {
    "enabled": true,
    "id": "b",
    "image": "http://b.com",
    "name": "B",
  },
]
`;

exports[`query sources should flag that more pages available 1`] = `
Object {
  "sources": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "a",
          "image": "http://a.com",
          "name": "A",
          "public": true,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "hasNextPage": true,
    },
  },
}
`;

exports[`query sources should return only active sources 1`] = `
Object {
  "sources": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "a",
          "image": "http://a.com",
          "name": "A",
          "public": true,
        },
      },
      Object {
        "node": Object {
          "id": "b",
          "image": "http://b.com",
          "name": "B",
          "public": true,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query sources should return only public sources 1`] = `
Object {
  "sources": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "a",
          "image": "http://a.com",
          "name": "A",
          "public": true,
        },
      },
      Object {
        "node": Object {
          "id": "b",
          "image": "http://b.com",
          "name": "B",
          "public": true,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query sources should return private display over public 1`] = `
Object {
  "sources": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "a",
          "image": "http://privatea1.com",
          "name": "Private A 1",
          "public": false,
        },
      },
      Object {
        "node": Object {
          "id": "b",
          "image": "http://privateb1.com",
          "name": "Private B 1",
          "public": false,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query sources should return private source even without public 1`] = `
Object {
  "sources": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "a",
          "image": "http://a.com",
          "name": "A",
          "public": true,
        },
      },
      Object {
        "node": Object {
          "id": "b",
          "image": "http://privateb2.com",
          "name": "Private B 2",
          "public": false,
        },
      },
      Object {
        "node": Object {
          "id": "c",
          "image": "http://privatec2.com",
          "name": "Private C 2",
          "public": false,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": false,
    },
  },
}
`;
